[package]
name = "enviro_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3.2"
bme280 = "0.2.1"
ltr-559 = "0.1.1"
alsa = "0.6.0"
spectrum-analyzer = "1.2.3"
rppal = "0.13.1"